# Runebearer-AI

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  implementation_plan.md  phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  phase5_plan.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/agents/: guidance_of_grace.py  iron_fist_alexander.py  maiden_melina.py  master_hewg.py  merchant_kale.py  queen_rennala.py  rag.py  sir_gideon_ofnir.py
app/api/: middleware.py
app/api/routes/: builds.py  health.py  queries.py  sessions.py
app/db/: postgres.py  redis.py
app/db/migrations/: 001_init.sql  002_vectors.sql  003_onboarding.sql
app/graph/: builder.py  edges.py  runner.py  state.py
app/models/: api.py  build.py
app/observability/: langfuse.py
app/prompts/: guidance_of_grace.py  iron_fist_alexander.py  maiden_melina.py  master_hewg.py  merchant_kale.py  onboarding.py  queen_rennala.py  rag.py  sir_ansbach.py  sir_gideon_ofnir.py  supervisor.py
app/rag/: embedder.py  query_rewriter.py  reranker.py  retriever.py
app/utils/: anthropic_response.py  build_state_to_json.py  build_state_to_summary.py  db_json.py  json_safe.py  specialist_llm.py
ingestion/: chunker.py  cleaner.py  embedder.py  pipeline.py  scraper.py  scrapper.py
ingestion/sources/: patch_notes_urls.txt  wiki_boss_urls.txt  wiki_item_urls.txt  wiki_mechanic_urls.txt  wiki_stat_urls.txt  wiki_weapon_urls.txt
tests/: conftest.py
tests/integration/: test_api.py  test_health.py
tests/load/: locustfile.py
tests/unit/: test_edges.py  test_retriever.py
(+4 files in other folders)
