[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion"]

[project]
name = "elden-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis[hiredis]>=5.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "langfuse>=2.53",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "anthropic>=0.34",
    "openai>=1.50",
    "tenacity>=9.0",
    "httpx>=0.27",
    "aiohttp>=3.10",
    "beautifulsoup4>=4.12",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "locust>=2.31",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
